change web icon

--- a/themes/ocean/_config.yml
+++ b/themes/ocean/_config.yml
@@ -9,7 +9,7 @@ rss: /atom.xml
 
 # Miscellaneous
 favicon: /牛.jpg
-brand: /images/hexo.svg
+brand: /images/鹅.jpg
 
 # Ocean Video
 # Because I put videos in multiple formats on the same path, I just labeled the path here.
