--- a/themes/ocean/_config.yml
+++ b/themes/ocean/_config.yml
@@ -14,8 +14,8 @@ brand: /images/鹅.jpg
 # Ocean Video
 # Because I put videos in multiple formats on the same path, I just labeled the path here.
 ocean:
-  overlay: true
-  path: /images/ocean/房子.mp4
+  overlay: false
+  path: /images/ocean/
   brand: /images/鹅.jpg
 
 # Content
